fix: formatting on mobile and portrait aspect ratios

--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ My styles
   font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
   position: relative;
   display: grid;
-  gap: 1em;
+  gap: clamp(0.5rem, 2vmin, 1rem);
+  width: 100%;
   height: 100dvh;
   background-color: black;
 }
@@ -99,7 +100,7 @@ My styles
   justify-content: center;
   border: none;
   cursor: pointer;
-  font-size: 4em;
+  font-size: clamp(1rem, 5vmin, 4rem);
 }
 
 .player--active {
@@ -136,6 +137,12 @@ My styles
   border: 2px solid grey;
   border-radius: 0.5em;
   padding: 1em 1.5em;
+}
+
+@media (orientation: portrait) {
+  #controls {
+    transform: translate(-50%, -50%) rotate(90deg);
+  }
 }
 
 #controls fieldset {
